# Arcanum-Vivium

./: README.md
C#/: README.md
C#/ArcanumVivum.Unity/: package.json
C#/ArcanumVivum.Unity/Runtime/: ArcanumVivum.SpellEngine.asmdef
C#/ArcanumVivum.Unity/Runtime/Audio/: AudioConfig.cs  AudioSpellService.cs  WakeWordDetector.cs  WhisperTranscriber.cs
C#/ArcanumVivum.Unity/Runtime/Core/: BalancingSystem.cs  EmbeddingGenerator.cs  EvolutionEngine.cs  FeatureExtractor.cs  SpellEngineService.cs
C#/ArcanumVivum.Unity/Runtime/Database/: CloudSpellDatabases.cs  ISpellDatabase.cs  InMemorySpellDatabase.cs  RestApiSpellDatabase.cs
C#/ArcanumVivum.Unity/Runtime/Integration/: GameSpellSystem.cs  UnityMicrophoneRecorder.cs
C#/ArcanumVivum.Unity/Runtime/Models/: SpellModels.cs
C#/ArcanumVivum.Unity/Runtime/Resolvers/: ResolverInterfaces.cs  RuleBasedResolver.cs
C++/: CMakeLists.txt  README.md
C++/examples/: basic_usage.cpp
C++/include/arcanum/: audio.hpp  balancing.hpp  database.hpp  embedding.hpp  evolution.hpp  feature_extractor.hpp  resolver.hpp  spell_engine.hpp  types.hpp
C++/src/: audio.cpp  balancing.cpp  database.cpp  embedding.cpp  evolution.cpp  feature_extractor.cpp  resolver.cpp  spell_engine.cpp
GDScript/: README.md
GDScript/addons/arcanum_vivum_spell_engine/: arcanum_spell_engine.gd
JavaScript/: .env.example  README.md  package.json
JavaScript/src/: index.js
JavaScript/src/audio/: index.js
JavaScript/src/core/: engine.js
JavaScript/src/database/: index.js
JavaScript/src/examples/: index.js
(+20 files in other folders)
